--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+  <script async defer data-domain="pure-cosmetic.vercel.app" src="https://plausible.io/js/plausible.js"></script>
 </body>
 
 </html>
